grid and cell class x class

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        
+    <div class="center">
+        <div class="container">
+            <div class="cell x"></div>
+            <div class="cell"></div>
+            <div class="cell o"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            </div>
     </div>
 </body>
 
