create buggy game

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="center">
         <div class="container">
-            <div class="cell x"></div>
             <div class="cell"></div>
-            <div class="cell o"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
