create win screen create restart function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
+        </div>
+    </div>
+    <div id="win" class="win">
+        <div class="center">
+            <div class="win-box">
+                <p id="win-text">
+                    YOU WIN
+                </p>
+                <button id="restart">RESTART</button>
             </div>
+        </div>
     </div>
 </body>
 
