--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="center">
+        <h3 id="turn-text">X TURN</h3>
         <div class="container">
             <div class="cell"></div>
             <div class="cell"></div>
